# redwood-app

./: settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/com/example/redwood/: BenchmarkTest.java  ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  benchmark_cpu.cpp  benchmark_cpu.hpp  benchmark_gpu.cpp  benchmark_gpu.hpp  native-lib.cpp
app/src/main/cpp/easyvk/: easyvk.cpp  easyvk.h
app/src/main/cpp/pipeline/apps/cpu_demo/: main.cpp
app/src/main/cpp/pipeline/benchmarks/: bm_brt.cpp  bm_morton.cpp  bm_oct.cpp  bm_sort.cpp  common.hpp  config.hpp
app/src/main/cpp/pipeline/include/: all.hpp  brt.hpp  edge_count.hpp  init.hpp  morton.hpp  morton_types.hpp  oct.hpp  octree.hpp  partial_sum.hpp  radix_tree.hpp  simple_radix_sort.hpp  sort.hpp  unique.hpp
app/src/main/cpp/pipeline/kernels/: edge_count.cpp  init.cpp  morton.cpp  octree.cpp  partial_sum.cpp  radix_tree.cpp  sort.cpp  unique.cpp
app/src/main/java/com/example/redwood/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/redwood/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
